2008-12-28  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Added initial Spanish translation.

2008-11-21  Mario Blättermann <mariobl@svn.gnome.org>

	* de/de.po: Updated German translation.

2008-10-25  Mario Blättermann <mariobl@svn.gnome.org>

	* de/*.xml: Deleted unneeded xml files.
	* de/.xml2po.mo: Deleted unneeded gettext file.
	* de/de.po: Updated German translation.
	* de/figures/druid-start.png: Added screenshot.

2008-10-04  Peter Bloomfield

	* C/balsa.xml: add items needed by gnome-doc-utilities.
	* Makefile.am: create as needed by gnome-doc-utilities.
