@@ -1,3 +1,8 @@
+2009-04-30  Peter Bloomfield
+
+	* C/balsa.xml: Preferences moved from the Settings menu to the
+	Edit menu.
+
 2008-12-28  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es/es.po: Added initial Spanish translation.
